--- a/Taylr/Base.lproj/Main.storyboard
+++ b/Taylr/Base.lproj/Main.storyboard
@@ -677,20 +677,20 @@
                         <viewControllerLayoutGuide type="bottom" id="so0-au-wZg"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="a2d-JO-QQN">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="1200"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lnf-Ow-38p" userLabel="Status Bar">
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lnf-Ow-38p" userLabel="Status Bar">
                                 <rect key="frame" x="0.0" y="-2" width="375" height="22"/>
                                 <color key="backgroundColor" red="0.94509803920000002" green="0.94509803920000002" blue="0.94509803920000002" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="22" id="557-5F-eYn"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U3a-sc-A4a" userLabel="Navigation Bar">
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="U3a-sc-A4a" userLabel="Navigation Bar">
                                 <rect key="frame" x="0.0" y="20" width="375" height="70"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KPL-gz-OCJ">
+                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KPL-gz-OCJ">
                                         <rect key="frame" x="122" y="10" width="131" height="50"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample-taylor-avatar" translatesAutoresizingMaskIntoConstraints="NO" id="uD7-V4-mF6" customClass="UserAvatarView" customModule="Taylr" customModuleProvider="target">
@@ -747,7 +747,7 @@
                                             <action selector="goBack:" destination="OaH-F1-uJP" eventType="touchUpInside" id="dfS-Vh-62J"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wR6-BU-7vB" userLabel="More">
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wR6-BU-7vB" userLabel="More">
                                         <rect key="frame" x="325" y="0.0" width="50" height="70"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="50" id="hGX-uq-Jvd"/>
@@ -788,7 +788,7 @@
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="b5e-73-k20">
                                 <rect key="frame" x="282" y="45" width="20" height="20"/>
                             </activityIndicatorView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="iVG-b4-OV1">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="iVG-b4-OV1">
                                 <rect key="frame" x="0.0" y="90" width="375" height="1110"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="KuP-GS-TWV">
@@ -1229,13 +1229,23 @@
                                                         <outletCollection property="gestureRecognizers" destination="Wpx-6X-1JX" appends="YES" id="m8S-aj-0xu"/>
                                                     </connections>
                                                 </imageView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-edit" translatesAutoresizingMaskIntoConstraints="NO" id="KjJ-8A-6D3">
+                                                    <rect key="frame" x="561" y="159" width="39" height="40"/>
+                                                </imageView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-edit" translatesAutoresizingMaskIntoConstraints="NO" id="ZBE-ru-lGM">
+                                                    <rect key="frame" x="311" y="109" width="39" height="40"/>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="Mmq-ff-Gkx" secondAttribute="trailing" id="3hk-ko-88b"/>
                                                 <constraint firstAttribute="centerY" secondItem="8hD-TE-i8H" secondAttribute="centerY" id="3kb-Jr-P9h"/>
+                                                <constraint firstItem="KjJ-8A-6D3" firstAttribute="trailing" secondItem="Mmq-ff-Gkx" secondAttribute="trailing" id="8vy-7R-OBe"/>
+                                                <constraint firstItem="8hD-TE-i8H" firstAttribute="bottom" secondItem="ZBE-ru-lGM" secondAttribute="bottom" id="CCj-RX-InH"/>
                                                 <constraint firstAttribute="centerX" secondItem="8hD-TE-i8H" secondAttribute="centerX" id="LcW-hS-OyL"/>
+                                                <constraint firstItem="8hD-TE-i8H" firstAttribute="trailing" secondItem="ZBE-ru-lGM" secondAttribute="trailing" id="NLe-vd-QmE"/>
                                                 <constraint firstItem="Mmq-ff-Gkx" firstAttribute="leading" secondItem="Fu4-Bo-WFz" secondAttribute="leading" id="dyX-pD-aBU"/>
                                                 <constraint firstItem="Mmq-ff-Gkx" firstAttribute="top" secondItem="Fu4-Bo-WFz" secondAttribute="top" id="gfl-Zl-8rj"/>
+                                                <constraint firstItem="KjJ-8A-6D3" firstAttribute="bottom" secondItem="Mmq-ff-Gkx" secondAttribute="bottom" id="iFf-xT-mCp"/>
                                                 <constraint firstAttribute="bottom" secondItem="Mmq-ff-Gkx" secondAttribute="bottom" id="oqr-qN-kTr"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -1408,6 +1418,7 @@
     <resources>
         <image name="ic-back" width="17" height="23"/>
         <image name="ic-chats" width="32" height="32"/>
+        <image name="ic-edit" width="39" height="40"/>
         <image name="ic-facebook" width="28" height="28"/>
         <image name="ic-me" width="34" height="35"/>
         <image name="ic-more" width="29" height="7"/>
