--- a/Taylr/Base.lproj/Onboarding.storyboard
+++ b/Taylr/Base.lproj/Onboarding.storyboard
@@ -24,7 +24,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RgB-LM-On4" customClass="DesignableLabel" customModule="Taylr" customModuleProvider="target">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RgB-LM-On4" customClass="DesignableLabel" customModule="Taylr" customModuleProvider="target">
                                 <rect key="frame" x="182" y="335" width="236" height="51"/>
                                 <attributedString key="attributedText">
                                     <fragment>
@@ -80,10 +80,10 @@
                                     <action selector="startLogin:" destination="dFw-q9-bre" eventType="touchUpInside" id="LLF-Ml-IV2"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="c0f-ne-erJ" userLabel="Terms &amp; Privacy">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c0f-ne-erJ" userLabel="Terms &amp; Privacy">
                                 <rect key="frame" x="245" y="566" width="110" height="26"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1Pp-CT-PMh" customClass="DesignableButton" customModule="Taylr" customModuleProvider="target">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1Pp-CT-PMh" customClass="DesignableButton" customModule="Taylr" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="36" height="26"/>
                                         <state key="normal">
                                             <attributedString key="attributedTitle">
@@ -105,7 +105,7 @@
                                             <action selector="viewTerms:" destination="dFw-q9-bre" eventType="touchUpInside" id="7qQ-pM-k90"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ODl-1I-fve" customClass="DesignableButton" customModule="Taylr" customModuleProvider="target">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ODl-1I-fve" customClass="DesignableButton" customModule="Taylr" customModuleProvider="target">
                                         <rect key="frame" x="66" y="0.0" width="44" height="26"/>
                                         <state key="normal">
                                             <attributedString key="attributedTitle">
@@ -138,7 +138,7 @@
                                     <constraint firstItem="1Pp-CT-PMh" firstAttribute="leading" secondItem="c0f-ne-erJ" secondAttribute="leading" id="xUj-Hg-ayT"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Taylr" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j28-cd-evj">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Taylr" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j28-cd-evj">
                                 <rect key="frame" x="253" y="155" width="94" height="42"/>
                                 <fontDescription key="fontDescription" name="TransatTextBlack" family="Transat Text" pointSize="42"/>
                                 <color key="textColor" red="0.94117647059999998" green="0.98039215690000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
@@ -211,12 +211,17 @@
                                                         <outletCollection property="gestureRecognizers" destination="YCe-Bs-C7V" appends="YES" id="2kg-tt-sUl"/>
                                                     </connections>
                                                 </imageView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-edit" translatesAutoresizingMaskIntoConstraints="NO" id="Uk4-NG-7Mb">
+                                                    <rect key="frame" x="561" y="115" width="39" height="40"/>
+                                                </imageView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                             <constraints>
+                                                <constraint firstItem="Uk4-NG-7Mb" firstAttribute="trailing" secondItem="yQk-Ls-DaV" secondAttribute="trailing" id="45t-sV-PkS"/>
                                                 <constraint firstAttribute="centerX" secondItem="y0h-Jf-NZy" secondAttribute="centerX" id="8Nj-hy-37c"/>
                                                 <constraint firstItem="yQk-Ls-DaV" firstAttribute="leading" secondItem="AhA-9L-oIQ" secondAttribute="leading" id="8rb-OU-0y3"/>
                                                 <constraint firstItem="yQk-Ls-DaV" firstAttribute="top" secondItem="AhA-9L-oIQ" secondAttribute="top" id="BAH-rn-eae"/>
+                                                <constraint firstItem="Uk4-NG-7Mb" firstAttribute="bottom" secondItem="yQk-Ls-DaV" secondAttribute="bottom" id="KwA-fF-Zvc"/>
                                                 <constraint firstItem="y0h-Jf-NZy" firstAttribute="centerY" secondItem="yQk-Ls-DaV" secondAttribute="bottom" id="MdM-JN-v8z"/>
                                                 <constraint firstAttribute="bottom" secondItem="y0h-Jf-NZy" secondAttribute="bottom" priority="749" constant="8" id="WUx-UP-Gs8"/>
                                                 <constraint firstAttribute="trailing" secondItem="yQk-Ls-DaV" secondAttribute="trailing" id="c7E-OL-nQ9"/>
@@ -290,6 +295,7 @@
     </scenes>
     <resources>
         <image name="ic-addphoto-plus" width="73" height="73"/>
+        <image name="ic-edit" width="39" height="40"/>
         <image name="sample-cover-image" width="579" height="214"/>
     </resources>
     <inferredMetricsTieBreakers>
